# asterinas

./: .typos.toml  Cargo.toml  Components.toml  Makefile  OSDK.toml  asterinas.nix  benchmark.nix  build_initramfs.sh  build_nix.sh  build_rootfs.sh  busybox.nix  create_qcow2.sh  github-runner-manager.sh  hackbench.nix  i8042.patch  initramfs.nix  iozone.nix  lmbench.nix  ltp.nix  membench.nix  miniz_oxide.patch  mmap_test.c  nixos-enter  nixos-generate-config  nixos-install  nixos-rebuild  os-config.nix  rootfs.nix  run_disk.sh  run_iso.sh  run_qcow2.sh  schbench.nix  splash.nix  start_nginx.sh  sysbench.nix  syscall_test.nix  test.nix  zune-inflate.patch
.claude/skills/: fix-conformance
.claude/workflow/: README.md  conformance-fix.workflow.js
.github/workflows/: benchmark_x86.yml  test_nixos_minimal.yml  test_popular_apps.yml  test_x86.yml
ai-coding/: README.md  experiment.md  lessons.md
ai-coding/artifacts/: 0001-Add-LTP-batch-tracker-template.patch  0002-Add-LTP-case-selection-filters.patch  0003-Add-LTP-family-triage-sheet.patch  0004-Add-temporary-LTP-blocklist-overlays.patch  0005-Add-LTP-failure-summary-artifacts.patch  0006-Isolate-LTP-workdir-from-run-artifacts.patch  0007-Enable-first-LTP-clock-family-batch.patch  (+93 more)
kernel/: Cargo.toml
kernel/comps/block/: Cargo.toml
kernel/comps/block/src/: device_id.rs  lib.rs  partition.rs  sysnode.rs
kernel/comps/framebuffer/: Cargo.toml
kernel/comps/framebuffer/src/: console.rs  framebuffer.rs  lib.rs
ostd/: Cargo.toml
test/: Makefile
tools/: bump_version.sh  qemu_args.sh  run_qcow2.sh
(+542 files in other folders)
